<resources>
    <string name="app_name">Marvel  Comics App</string>
    <string name="title_characters">Characters</string>
    <string name="title_favourites">Favourites</string>
    <string name="image_of_marvel_character">Image of marvel character</string>
    <string name="placeholder_image">Placeholder image</string>
    <string name="one_character">One Character</string>
    <string name="character_name">Character Name</string>
    <string name="character_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>