<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_character">

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.sirdave.marvelcomicsapp.ui.character_list.CharacterListFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_character_list">
        <action
            android:id="@+id/viewCharacter"
            app:destination="@id/navigation_one_character" />

    </fragment>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.sirdave.marvelcomicsapp.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/viewFavouriteCharacter"
            app:destination="@id/navigation_one_character" />
    </fragment>


    <fragment
        android:id="@+id/navigation_one_character"
        android:name="com.sirdave.marvelcomicsapp.ui.character.CharacterFragment"
        android:label="@string/one_character"
        tools:layout="@layout/fragment_character" />

</navigation>