<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.character.CharacterFragment">

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/placeholder_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/placeholder" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close"
        />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="15dp"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/character_image"
        tools:text="@string/character_name"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favourite"
        android:src="@drawable/ic_favourite"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/character_image"
        app:layout_constraintBottom_toBottomOf="@id/character_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/character_name_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourite"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        tools:text="@string/character_name" />

    <TextView
        android:id="@+id/character_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_name_headline"
        tools:text="@string/character_description" />

</androidx.constraintlayout.widget.ConstraintLayout>